# CMake-Docker

./: LICENSE.md  README.md  cmake_common.cmake  kwsys_common.cmake  Ταυτότητα Έργου.md  Ταυτότητα Έργου.odt
Help/manual/: cmake-modules.7.rst
Help/module/: CPackDocker.rst
Modules/: CMakeDocker.cmake  CPack.cmake  CPackDocker.cmake
Source/: CMakeLists.txt
Source/CPack/: cmCPackDockerGenerator.cxx  cmCPackDockerGenerator.h  cmCPackGeneratorFactory.cxx
Tests/: CMakeLists.txt
Tests/CMakeDocker/: CMakeLists.txt
Tests/CMakeDockerCreate/: CMakeLists.txt
Tests/CPackComponentsDOCKER/: CMakeLists.txt  MyLibCPackConfig-components-cmd1.cmake.in  MyLibCPackConfig-components-containers1.cmake.in  MyLibCPackConfig-components-depend1.cmake.in  MyLibCPackConfig-components-depend2.cmake.in  MyLibCPackConfig-components-depend3.cmake.in  MyLibCPackConfig-components-depend4.cmake.in  MyLibCPackConfig-components-depend5.cmake.in  MyLibCPackConfig-components-entrypoint1.cmake.in  MyLibCPackConfig-components-env1.cmake.in  MyLibCPackConfig-components-expose1.cmake.in  MyLibCPackConfig-components-label1.cmake.in  MyLibCPackConfig-components-label2.cmake.in  MyLibCPackConfig-components-onbuild1.cmake.in  MyLibCPackConfig-components-postdepends1.cmake.in  MyLibCPackConfig-components-predepends1.cmake.in  MyLibCPackConfig-components-user1.cmake.in  MyLibCPackConfig-components-volume1.cmake.in  MyLibCPackConfig-components-workdir1.cmake.in  RunCPackVerifyResult-components-containers1.cmake  RunCPackVerifyResult-components-depend1.cmake  RunCPackVerifyResult-components-depend2.cmake  (+4 more)
(+4 files in other folders)
